# Chip8-Emulator

./: CMakeLists.txt  Log.md
include/: chip8.h
src/: chip8.c
